package uoc.tfm.vmejia.speedrun.cbr;

public class Modelo {

    public Modelo(){

    }

}
