@startuml

title __CBR's Class Diagram__\n

  namespace uoc.tfm.vmejia.speedrun {
    namespace cbr {
      class uoc.tfm.vmejia.speedrun.cbr.Caso {
          + a_objetivo : String
          + Caso()
      }
    }
  }
  

  namespace uoc.tfm.vmejia.speedrun {
    namespace cbr {
      class uoc.tfm.vmejia.speedrun.cbr.Modelo {
          + Modelo()
      }
    }
  }
  

  namespace uoc.tfm.vmejia.speedrun {
    namespace cbr {
      class uoc.tfm.vmejia.speedrun.cbr.UtilCaso {
          {static} + ConsultaCBR()
          {static} + getValores()
      }
    }
  }
  

  namespace uoc.tfm.vmejia.speedrun {
    namespace cbr {
      class uoc.tfm.vmejia.speedrun.cbr.UtilModelo {
          {static} + estrategia()
      }
    }
  }
  

  uoc.tfm.vmejia.speedrun.cbr.Caso o-- uoc.tfm.vmejia.speedrun.var.Almacen : alm1
  uoc.tfm.vmejia.speedrun.cbr.Caso o-- uoc.tfm.vmejia.speedrun.var.Almacen : alm2
  uoc.tfm.vmejia.speedrun.cbr.Caso o-- uoc.tfm.vmejia.speedrun.var.Cofre : cofre_galleta
  uoc.tfm.vmejia.speedrun.cbr.Caso o-- uoc.tfm.vmejia.speedrun.var.Cofre : cofre_pan
  uoc.tfm.vmejia.speedrun.cbr.Caso o-- uoc.tfm.vmejia.speedrun.var.Cofre : cofre_pastel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
